* Thu Jul 07 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.2.2-0
- Updated the client_nets parameters to pull from global prior to using Hiera
  and to fall back to the safety of 127.0.0.1.

* Wed Apr 13 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.2.1-0
- Changed the default provider for the rsync service to be redhat

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.2.0-5
- Added compliance function support

* Wed Jan 27 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.2.0-4
- Normalized common static module assets

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.2.0-3
- migration to simplib and simpcat (lib/ only)

* Sat Aug 01 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-2
- Fixed a bug in the rsync provider that was not properly outputting the exit
  code on a failure.

* Fri Jul 31 2015 Kendall Moore <kmoore@keywcorp.com> - 4.2.0-2
- Updated to use new rsyslog module.

* Wed May 06 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.0-1
- Prevent file syncs during --noop runs.

* Thu Apr 02 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-0
- Made several changes, including one potentially breaking change, to make
  things consistent with modern types and providers.
  - Confine to Linux systems and systems with the command 'rsync'
  - Remove methods from the type and place them into the provider where
    possible.
  - Change 'do' to 'action' since 'do' is a reserved word in Ruby
  - Make 'password/pass' a provider for action on the system in the password
    files
  - No longer create custom resources in the type. This was causing issues with
    an invalid catalog when using PuppetDB
  - Pushed the management of /etc/rsync/secrets and /etc/rsync to server.pp
  - Moved server files to /etc/rsync/secrets and left client files in
    /etc/rsync so that we could properly use 'tidy'. This is currently noisy
    and we may need to pull in external Puppet patches to fix it.