@@ -1,5 +1,5 @@
 Requires: pupmod-simp-compliance_markup
 Requires: pupmod-simp-rsyslog >= 5.0.0
-Requires: pupmod-simp-simpcat >= 4.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
 Requires: pupmod-simp-stunnel >= 4.2.0-0
 Obsoletes: pupmod-rsync-test >= 0.0.1
