@@ -1,6 +1,6 @@
 {
   "name":    "simp-rsync",
-  "version": "4.2.2",
+  "version": "5.0.0",
   "author":  "simp",
   "summary": "manage and rsync server, secured by stunnel",
   "license": "Apache-2.0",
@@ -19,7 +19,7 @@
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 4.0.0"
+      "version_requirement": ">= 6.0.0"
     },
     {
       "name": "simp/compliance_markup",
