@@ -1,3 +1,7 @@
+* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
+- Updated to use the version of 'simpcat' that does not conflict with
+  'puppetlabs/concat'.
+
 * Thu Jul 07 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.2.2-0
 - Updated the client_nets parameters to pull from global prior to using Hiera
   and to fall back to the safety of 127.0.0.1.
